<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_login"
                style="@style/text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/button_radius30"
                android:text="@string/log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_log_out"
                style="@style/text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/button_radius30"
                android:text="@string/log_out"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_my_page"
                style="@style/text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_radius30"
                android:text="@string/my_page"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                app:layout_constraintStart_toEndOf="@+id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/btn_login" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_radius30"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                app:layout_constraintStart_toEndOf="@+id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/btn_login" />

            <TextView
                android:id="@+id/textView2"
                style="@style/text20.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
                app:layout_constraintStart_toEndOf="@+id/iv_logo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="590dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardElevation="30dp"
                app:contentPadding="10dp">

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_content4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text16"
                    android:text="작성자 아이디"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_img1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lotto"
                    android:scaleType="fitCenter"
                    app:layout_constraintTop_toBottomOf="@+id/text_id"/>

                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text16"
                    android:text="내용"
                    app:layout_constraintTop_toBottomOf="@+id/iv_img1"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_content2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/text_id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text16"
                    android:text="작성자 아이디"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_img2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lotto"
                    android:scaleType="fitCenter"
                    app:layout_constraintTop_toBottomOf="@+id/text_id2"/>

                <TextView
                    android:id="@+id/text_content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text16"
                    android:text="내용2"
                    app:layout_constraintTop_toBottomOf="@+id/iv_img2"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_content3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/text_id3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text16"
                    android:text="작성자 아이디"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_img3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lotto"
                    android:scaleType="fitCenter"
                    app:layout_constraintTop_toBottomOf="@+id/text_id3"/>

                <TextView
                    android:id="@+id/text_content3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text16"
                    android:text="내용3"
                    app:layout_constraintTop_toBottomOf="@+id/iv_img3"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>